# Fast-API-Tutorial

./: .pre-commit-config.yaml  .secrets.baseline  .test.env  CHANGELOG.md  Makefile  README.md  pyproject.toml
src/: __init__.py  __main__.py  cfg.py
src/api/: courses.py  sections.py  users.py
src/api/utils/: __init__.py  courses.py  users.py
src/db/: __init__.py
src/db/models/: __init__.py  alembic.ini  course.py  mixins.py  user.py
src/db/models/alembic/: env.py
src/db/models/alembic/versions/: 370c632bf65b_v1.py  577d561a237e_v2.py
src/schemas/: course.py  user.py
