[tool.poetry]
name = "fast-api-tutorial"
version = "0.3.0"
description = ""
authors = ["Gleb Khaykin <khaykingleb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.4"
SQLAlchemy-Utils = "^0.38.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
detect-secrets = "^1.4.0"
mypy = "^0.982"
commitizen = "^2.35.0"
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
src_paths = ["src", "tests"]
profile = "black"
line_length = 100
multi_line_output = 3
order_by_type = true
reverse_relative = true
from_first = false

[tool.semantic_release]
version_variable = [
  "pyproject.toml:version",
  "src/__main__.py:version",
  "src/__init__.py:__version__"
]
version_pattern = [
  "Makefile:^VERSION := {version}"
]
upload_to_pypi = false
upload_to_release = false
commit_subject = "chore(release): v{version} [skip ci]"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
